data/derived/comb/progs/unify/prog5546.ml.out
Characters 48-69:
  let fixpoint (f,b) = wwhile ( let func x = f in (f, not (f b = b), b));;
                                                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
